test/semantic_errors/invalid_call2.mc
void foo(int a) {

}

int main() {
    foo(); /* foo requires one int argument but nothing is given */
}